; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_lock.c_svn_fs_base__get_lock.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_lock.c_svn_fs_base__get_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lock_token_get_args = type { i32**, i32 }

@TRUE = common dso_local global i32 0, align 4
@txn_body_get_lock = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_base__get_lock(i32** %0, i32* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.lock_token_get_args, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* @TRUE, align 4
  %12 = call i32 @svn_fs__check_fs(i32* %10, i32 %11)
  %13 = call i32 @SVN_ERR(i32 %12)
  %14 = load i8*, i8** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @svn_fs__canonicalize_abspath(i8* %14, i32* %15)
  %17 = getelementptr inbounds %struct.lock_token_get_args, %struct.lock_token_get_args* %9, i32 0, i32 1
  store i32 %16, i32* %17, align 8
  %18 = load i32**, i32*** %5, align 8
  %19 = getelementptr inbounds %struct.lock_token_get_args, %struct.lock_token_get_args* %9, i32 0, i32 0
  store i32** %18, i32*** %19, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* @txn_body_get_lock, align 4
  %22 = load i32, i32* @FALSE, align 4
  %23 = load i32*, i32** %8, align 8
  %24 = call i32* @svn_fs_base__retry_txn(i32* %20, i32 %21, %struct.lock_token_get_args* %9, i32 %22, i32* %23)
  ret i32* %24
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_fs__check_fs(i32*, i32) #1

declare dso_local i32 @svn_fs__canonicalize_abspath(i8*, i32*) #1

declare dso_local i32* @svn_fs_base__retry_txn(i32*, i32, %struct.lock_token_get_args*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
